Fixed a bug that was preventing more than one flash card from being added to the deck. Also updated the README.md file.