@@ -2,6 +2,8 @@ Project Name: StudyBuddy powered by Java
 Team Name: StudyBuddy
 Team Members: Jaskaran Singh & Brendan Spranger
 
-Project Description: This program will be a virtual flashcard application that will help students study course material. We want to build this application because the virtual flashcards will help students study key terms and their definitions. This application will be useful for students who want to achieve higher scores in their courses.
+Project Description: This program is a virtual flash card application that can help students study course material. This application was built to help students study key terms and their definitions. This application can be useful for students who want to achieve higher scores in their courses.
 
-Plan and Estimate of Effort: We plan on allocating four to eight hours per week depending on other course requirements. This plan will be adjusted as needed to meet the requirements and deadlines for the project.
+How to run the application:
+Replace [JAVAFX_FILEPATH] in the line below with the file path of the JavaFX lib folder. Replace [STUDY_BUDDY_FILEPATH] in the line below with the file path of the StudyBuddy.jar file. Then, copy and paste the line below into the command prompt. Make sure to use forward-slashes, instead of back-slashes, in the file paths.
+java --module-path "[JAVAFX_FILEPATH]" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web -jar [STUDY_BUDDY_FILEPATH]/StudyBuddy.jar
